[gd_scene load_steps=2 format=2]

[ext_resource path="res://sayhello.gd" type="Script" id=1]

[node name="Panel" type="Panel"]
margin_right = 287.0
margin_bottom = 161.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 15.0
margin_top = 13.0
margin_right = 115.0
margin_bottom = 38.0
text = "this is a label"

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 42.0
margin_right = 123.0
margin_bottom = 62.0
text = "press Me"
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
